tests/externInfo/dhrystone-exported/db/invalid/path/strcpy_x.c.ttp
./db/invalid/path/strcpy_x.c : 66.20-66.21 : -- value at line 67, column 6 --# #                                   s ; pointer ; { String1Loc, String2Loc, feld__ASTREE___db_invalid_path_malloc_x_c_283 } + [0, 64]# 
./db/invalid/path/strcpy_x.c : 66.30-66.31 : -- value at line 67, column 6 --# #                                   t ; pointer ; { __ASTREEstring_127, __ASTREEstring_129, __ASTREEstring_131 } + {0}# 
./db/invalid/path/strcpy_x.c : 68.8-68.9 : -- value at line 68, column 8 --# #                                   i ; signed int ; [-2147483648, 2147483647]#  #-- value at line 69, column 8 --# # i ; signed int ; {0}# 
./db/invalid/path/strcpy_x.c : 69.17-69.18 : -- value at line 69, column 8 --# #                                   s ; pointer ; { String1Loc, String2Loc, feld__ASTREE___db_invalid_path_malloc_x_c_283 } + [0, 64]#  #-- value at line 70, column 14 --# #                                      s ; pointer ; { String1Loc, String2Loc, feld__ASTREE___db_invalid_path_malloc_x_c_283 } + [0, 64]# 
./db/invalid/path/strcpy_x.c : 69.19-69.20 : -- value at line 69, column 8 --# # i ; signed int ; {0}#  #-- value at line 70, column 14 --# # i ; signed int ; [0, 29]# 
./db/invalid/path/strcpy_x.c : 69.24-69.25 : -- value at line 69, column 8 --# #                                   t ; pointer ; { __ASTREEstring_127, __ASTREEstring_129, __ASTREEstring_131 } + {0}#  #-- value at line 70, column 14 --# #                                      t ; pointer ; { __ASTREEstring_127, __ASTREEstring_129, __ASTREEstring_131 } + {0}# 
./db/invalid/path/strcpy_x.c : 69.26-69.27 : -- value at line 69, column 8 --# # i ; signed int ; {0}#  #-- value at line 70, column 14 --# # i ; signed int ; [0, 29]# 
./db/invalid/path/strcpy_x.c : 70.14-70.21 : -- value at line 70, column 14 --# #                                    counter ; signed int ; [209, 379] /\ != 0#  #-- value at line 71, column 14 --# #                                      counter ; signed int ; [210, 380] /\ != 0# 
./db/invalid/path/strcpy_x.c : 71.14-71.15 : -- value at line 71, column 14 --# # i ; signed int ; [0, 29]# 
